--- a/index.html
+++ b/index.html
@@ -5,58 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔥 Tentación en WhatsApp 🔥</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
             height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-image: url('foto1.jpg'); /* Usa tu imagen */
-            background-size: cover;
-            background-position: center;
-        }
-        .container {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-            display: inline-block;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 20px;
+            background: linear-gradient(135deg, #1a1a2e, #16213e);
             color: #fff;
+            place-items: center;
+        }
+        .box {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(12px);
+            text-align: center;
+            transition: transform 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 90%;
+            max-width: 300px;
+        }
+        .box:hover {
+            transform: scale(1.05);
         }
         h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
+            font-size: 22px;
+            margin-bottom: 15px;
+            color: #ffcc00;
         }
-        .whatsapp-button {
-            background-color: #ff4757;
+        .button {
+            background: linear-gradient(90deg, #ff4757, #ff6b81);
             color: white;
-            padding: 12px 25px;
+            padding: 12px 20px;
             border: none;
-            border-radius: 5px;
-            font-size: 20px;
+            border-radius: 8px;
+            font-size: 16px;
             cursor: pointer;
             text-decoration: none;
-            display: inline-block;
+            display: flex;
+            align-items: center;
+            gap: 10px;
             font-weight: bold;
+            transition: all 0.3s ease;
+            margin-top: 10px;
         }
-        .whatsapp-button:hover {
-            background-color: #e84118;
+        .button:hover {
+            background: linear-gradient(90deg, #ff6b81, #ff4757);
             transform: scale(1.1);
-            transition: 0.3s;
+        }
+        .icon {
+            width: 24px;
+            height: 24px;
+        }
+        @media (max-width: 600px) {
+            body {
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(4, 1fr);
+            }
         }
     </style>
 </head>
 <body>
-
-    <div class="container">
+    <div class="box">
         <h2>🔥 ¿Te atreves a hablar con este bombón? 🔥</h2>
-        <a class="whatsapp-button" href="https://wa.me/+51930191248?text=Hola%20bombón,%20no%20pude%20resistirme%20a%20escribirte..." target="_blank">
-            💋 Entra si te atreves 💋
+        <a class="button" href="https://wa.me/+51930191248?text=Hola%20bombón,%20no%20pude%20resistirme%20a%20escribirte..." target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"> 💋 Entra si te atreves 💋
         </a>
     </div>
-
+    <div class="box">
+        <h2>💰 Apoya con Yape 💰</h2>
+        <a class="button" href="https://yape.com/tu-enlace" target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Yape_Logo.png" alt="Yape"> 📲 Yapea aquí 📲
+        </a>
+    </div>
+    <div class="box">
+        <h2>💳 Transferencia Bancaria 💳</h2>
+        <a class="button" href="https://banco.com/tu-enlace" target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/0/04/Visa.svg" alt="Visa"> Visa
+        </a>
+        <a class="button" href="https://banco.com/tu-enlace" target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="Mastercard"> Mastercard
+        </a>
+    </div>
+    <div class="box">
+        <h2>📱 Sígueme en redes 📱</h2>
+        <a class="button" href="https://instagram.com/tuusuario" target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"> Instagram
+        </a>
+        <a class="button" href="https://facebook.com/tuusuario" target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"> Facebook
+        </a>
+        <a class="button" href="https://tiktok.com/@tuusuario" target="_blank">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/en/a/a9/TikTok_logo.svg" alt="TikTok"> TikTok
+        </a>
+    </div>
 </body>
 </html>
